# structsight

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package.json
docs/: BUILD.md  PUBLISHING.md  QUICKSTART.md
extension/: .eslintrc.json  .vscodeignore  package.json  tsconfig.json
extension/src/: analyzer.ts  extension.ts  hoverProvider.ts  refactoring.ts  webviewProvider.ts
native/: CMakeLists.txt  package.json
native/src/: addon.cpp  analyzer.cpp  analyzer.h  layout_calculator.cpp  layout_calculator.h  types.h  vtable_analyzer.cpp
native/test/: test.js
test/fixtures/: test_structs.cpp
